bank-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-app-service
spec:
  selector:
    service: bank-app
  ports:
    - name: http
      port: 8080
      protocol: TCP
